# sfft

./: .gitignore  CMakeLists.txt  README.md  disfft.h  experiment_lists.sh  experiment_utils.py  measures.txt  plot_experiments.sh  plot_experiments_vs_fftw.sh  plot_experiments_vs_sfft.sh  plot_experiments_vs_sparsity.sh  plot_time.py  run_and_plot_experiments.py  run_experiment.py  run_experiments.sh  run_experiments_vs_sparsity.py  show_measures.py  show_measures_4D.py  show_measures_with_comb.py  show_measures_with_comb_combined.py  show_measures_without_comb.py  show_measures_without_comb_combined.py  test_data.txt  test_fft.cpp
sfft-v1v2/: CMakeLists.txt  GNUmakefile  experiment.cc  fft.h  fftw.cc  generate_graphs.cc  run_sfft.sh  timer.cc  timer.h
src/: arithmetics.cpp  arithmetics.h  bench.cpp  benchmark.cpp  catch.hpp  disfft.h  fftw_utility_test.h  fftwrunner.h  filter.h  measure_run.cpp  pair_allocator.h  projection_recovery.h  signal.h  signalinfo.h  test_fft.cpp  test_fft_fftw.cpp  test_fft_fftw_rank.cpp  test_projrec.cpp  test_zerotest.cpp  tree.h  utility_test.h  utility_test_fftw.h
