cmake_minimum_required(VERSION 3.8.2)
project(dimension_independent_SFFT)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wfloat-equal -Wfloat-conversion")

add_executable(test_fft src/test_main.cpp src/test_fft.cpp)
add_executable(test_fft_fftw src/test_main.cpp src/test_fft_fftw.cpp)
target_link_libraries(test_fft_fftw fftw3)
add_executable(test_fft_fftw_rank src/test_main.cpp src/test_fft_fftw_rank.cpp)
target_link_libraries(test_fft_fftw_rank fftw3)
add_executable(bench src/test_main.cpp src/bench.cpp)
target_link_libraries(bench fftw3)
add_executable(test_zerotest src/test_main.cpp src/test_zerotest.cpp)
target_link_libraries(test_zerotest fftw3)
add_executable(measure_run src/measure_run.cpp)
target_link_libraries(measure_run fftw3)
